--- a/assets/style.css
+++ b/assets/style.css
@@ -1,12 +1,19 @@
+@font-face {
+    font-family: futura;
+    src: url(futura.ttf) format('truetype');
+}
+
 body {
   color: #111;
-  font-family: "Times New Roman", serif;
+  font-family: "futura", sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  background-color: #f2fff5;
 }
 
 a {
   color: #111;
+  text-decoration: none;
 }
 
 .hidden {
