--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@
 
 body {
   color: #111;
-  font-family: "futura", sans-serif;
+  font-family: futura, sans-serif;
   font-size: 16px;
   line-height: 1.5;
   background-color: #f2fff5;
