--- a/assets/style.css
+++ b/assets/style.css
@@ -32,7 +32,7 @@ a {
 }
 
 .nav--top li > a {
-  background: #eee;
+  background: #c7edcf;
   border-radius: 5px;
   line-height: 1;
   padding: 10px 15px;
