--- a/assets/style.css
+++ b/assets/style.css
@@ -79,7 +79,7 @@ main.content {
 @media (min-width: 65em) {
 }
 
-iframe{
-  height: 500px;
-  width: auto;
+.mobile {
+  width: 50%;
+  height: auto;
 }
